Add ability to increment votes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <title>King of Democracy</title>
   </head>
   <body>
-    <section id="identity">
-      <h2 id="position">Unemployed</h2>
-    </section>
     <section id="election">
 
     </section>
@@ -25,6 +22,16 @@
       </section>
 
       <section id="field">
+        <div id="identity">
+          <h2 id="position">Unemployed</h2>
+        </div>
+        <div>
+          <h2>
+            Election Poll Results
+          </h2>
+          <div id="progress-region">
+          </div>
+        </div>
       </section>
 
       <section id="shop">
